Update to Readme

--- a/src/app/_shared/components/space-mail/space-mail.component.scss
+++ b/src/app/_shared/components/space-mail/space-mail.component.scss
@@ -25,7 +25,7 @@
             color: white;
             background-color: $thortful-blue;
             padding: 20px 20px 0px;
-            min-width: 400px;
+            width: 400px;
             height: 500px;
             box-sizing: border-box;
             margin-right: 20px;
@@ -126,7 +126,17 @@
     .page-container {
         .button {width: 80%;}
         .card-container {
-            .card {margin: auto}
+            .inner-card {
+                width: 350px;
+            }
+            .card {margin: auto;
+                width: 350px;
+        .content {
+            .happy-birthday{
+                font-size: 25px;
+            }
+        }
+    }
             .inner-card {margin: 20px auto 20px; }
         }
         .card-container {max-width: 90%;
