--- a/src/app/_shared/components/navigation/navigation.component.html
+++ b/src/app/_shared/components/navigation/navigation.component.html
@@ -4,12 +4,6 @@
 
 		<nav class="wrapper">
 
-			<div class="logo"></div><!-- Logo -->
-
-			<input type="checkbox" id="menu-toggle" />
-
-			<label for="menu-toggle" class="label-toggle"></label>
-
 			<!-- <i class="fas fa-bars"></i> -->
 			<ul>
 
@@ -20,6 +14,7 @@
 					</div>
 
 					<div class="show-audio">
+						<a class="play" (click)="muteAudio()" *ngIf='!muted'><i class="fas fa-play"></i></a>
 						<a class="mute" (click)="muteAudio()" *ngIf='!muted'><i class="fas fa-volume-mute"></i> mute
 						</a>
 						<a class="mute" (click)="unMuteAudio()" *ngIf="muted"><i class="fas fa-volume-up"></i> volume
@@ -28,7 +23,7 @@
 
 				</li>
 
-				<li>
+				<li class="text-align-right">
 					<a routerLink="/space-mail" routerLinkActive="is-active">take me to your cards</a>
 				</li>
 
