--- a/src/app/_shared/components/space-mail/space-mail.component.scss
+++ b/src/app/_shared/components/space-mail/space-mail.component.scss
@@ -14,7 +14,7 @@
         display: flex;
         margin: auto;
         padding: 10px;
-        max-width: 800px;
+        width: 800px;
 
         .card {
             
@@ -124,27 +124,36 @@
 
 @media screen and (max-width: 700px) {
     .page-container {
-        .button {width: 80%;}
-        .card-container {
-            .inner-card {
-                width: 350px;
-            }
-            .card {margin: auto;
-                width: 350px;
-        .content {
-            .happy-birthday{
-                font-size: 25px;
-            }
+        .button {
+            width: 80%;
         }
-    }
+        .card-container {
+            width: 80%;
+            -webkit-flex-direction: column; 
+            flex-direction: column;
+
+            .inner-card {
+                width: 100%;
+                max-width: 400px;
+            }
+            .card {
+                margin: auto;
+                width: 100%;
+                max-width: 400px;
+                .content {
+                    .happy-birthday{
+                        font-size: 25px;
+                    }
+                }
+            }
+    
             .inner-card {margin: 20px auto 20px; }
         }
-        .card-container {max-width: 90%;
-            -webkit-flex-direction: column; 
-            flex-direction: column;}
-        
-        .character-container {width: 284px; 
+
+        .character-container {
+            width: 284px; 
             text-align: center;
-            padding-left: 32px;}
+            padding-left: 32px;
+        }
     }
 }
